mintmenu (5.1.6) julia; urgency=low

  * Highlighted apps now appear in bold, as opposed to using the fg[gtk.SELECTED] color (to avoid white on white issues with certain themes)
  
 -- Clement Lefebvre <root@linuxmint.com>  Tue,  26 Oct 2010 13:57:00 +0000

mintmenu (5.1.5) julia; urgency=low

  * Faster initialization
  * Fixed memory leak
  * Faster APT search
  * APT search results now include packages which summary or description match the keywords
  * APT search results: packages which name match the keywords are placed at the top of the list
  * Fixed process name on 64-bit platforms
  * Menu now properly redraws itself when theme is changed
  
 -- Clement Lefebvre <root@linuxmint.com>  Tue,  26 Oct 2010 12:00:00 +0000

mintmenu (5.1.4) julia; urgency=low

  * Unicode support in GTK bookmarks
  
 -- Clement Lefebvre <root@linuxmint.com>  Mon,  25 Oct 2010 12:22:00 +0000

mintmenu (5.1.3) julia; urgency=low

  * APT search can be turned off
  
 -- Clement Lefebvre <root@linuxmint.com>  Fri,  24 Sep 2010 14:52:00 +0000

mintmenu (5.1.2) julia; urgency=low

  * Many UI improvements
  
 -- Clement Lefebvre <root@linuxmint.com>  Thu,  23 Sep 2010 18:37:00 +0000

mintmenu (5.1.1) julia; urgency=low

  * Fixed launching apps with quotes
  
 -- Clement Lefebvre <root@linuxmint.com>  Thu,  23 Sep 2010 11:29:00 +0000

mintmenu (5.1.0) julia; urgency=low

  * Added GTK bookmarks in places
  
 -- Clement Lefebvre <root@linuxmint.com>  Thu,  23 Sep 2010 09:54:00 +0000
 
mintmenu (5.0.9) julia; urgency=low

  * Added GTK RC name to mintmenu (allows GTK themes to have mintMenu specific sections)
  
 -- Clement Lefebvre <root@linuxmint.com>  Fri,  17 Sep 2010 14:54:00 +0000

mintmenu (5.0.8) julia; urgency=low

  * Added GTK Themes support and configuration
  
 -- Clement Lefebvre <root@linuxmint.com>  Wed,  15 Sep 2010 17:11:00 +0000

mintmenu (5.0.7) julia; urgency=low

  * Fixed called to HidePlugin
  